# dd_study_session_flask

./: README.md
backend/: Dockerfile  pyproject.toml
backend/app/: app.py
backend/app/static/: base.css
backend/app/templates/: app.py  model.py
backend/app/templates/errors/: 404.html  error_handling.html
backend/app/templates/filter/: base_filter.html  block.html
backend/src/app/: app.py
backend/src/app/templates/: base.html  top.html
backend/src/app/templates/errors/: 403.html  error_handling.html  user_auth.html
backend/src/app/templates/filter/: custom_filter.html  list.html
cdk/: package-lock.json  package.json
cdk/lib/: study-session-stack.ts
cdk/lib/constructs/: studySessionApi.ts  studySessionhandler.ts
