[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.10.3"
flask = "^3.1.0"
gunicorn = "^23.0.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.8.3"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
